--- a/HomeWork41-44 CoreData/Base.lproj/Main.storyboard
+++ b/HomeWork41-44 CoreData/Base.lproj/Main.storyboard
@@ -1,25 +1,191 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="V1m-Na-sNI">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Title-->
+        <scene sceneID="c48-5L-sps">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="m8t-OY-gzs" customClass="OVUsersTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="UZZ-Zo-CTM">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="ts5-an-cNg">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ts5-an-cNg" id="UVM-A3-Dfo">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <animations/>
+                                </tableViewCellContentView>
+                                <animations/>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="m8t-OY-gzs" id="nvi-Fn-YTx"/>
+                            <outlet property="delegate" destination="m8t-OY-gzs" id="pEq-mX-62l"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Title" id="OIp-06-pqR"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HWx-Bc-yGG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="3514" y="-180"/>
+        </scene>
+        <!--Courses View Controller-->
+        <scene sceneID="TCl-7R-JTU">
+            <objects>
+                <tableViewController id="0Zw-7W-Isj" customClass="OVCoursesViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="He7-VO-Wpn">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CoursesCell" id="cuh-ms-pwE">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cuh-ms-pwE" id="0eR-rg-Kg6">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <animations/>
+                                </tableViewCellContentView>
+                                <animations/>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="0Zw-7W-Isj" id="Qlb-GQ-feK"/>
+                            <outlet property="delegate" destination="0Zw-7W-Isj" id="8RK-GM-p6o"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="BLN-mt-boV"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4f1-pC-D0W" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3514" y="497"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="QKB-em-gYs">
+            <objects>
+                <tableViewController id="xv2-eI-BOn" customClass="OVTeachersViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="d8X-0K-FY0">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TeachersCell" id="KAs-kp-HsE">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KAs-kp-HsE" id="nsH-kb-7Gq">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <animations/>
+                                </tableViewCellContentView>
+                                <animations/>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="xv2-eI-BOn" id="gDe-ME-5iB"/>
+                            <outlet property="delegate" destination="xv2-eI-BOn" id="t7D-ae-781"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Item" id="WHE-6v-1Md"/>
+                    <navigationItem key="navigationItem" id="aHp-sf-mWy"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Ke-9L-hzK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3514" y="1175"/>
+        </scene>
+        <!--Students-->
+        <scene sceneID="CnC-wM-oe5">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PjZ-ET-59Z" userLabel="Students" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Students" image="gender_neutral_user_32px.png" id="w6c-Cb-HPr" userLabel="Students"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Rdk-2Y-5J9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="m8t-OY-gzs" kind="relationship" relationship="rootViewController" id="wKz-ug-yCE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iWo-70-MYi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2789" y="-180"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="fIg-sK-uIS">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="V1m-Na-sNI" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="F2P-HA-qEe">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="PjZ-ET-59Z" kind="relationship" relationship="viewControllers" id="a1H-7C-kt3"/>
+                        <segue destination="uHF-4l-zff" kind="relationship" relationship="viewControllers" id="8d2-gS-HYj"/>
+                        <segue destination="OU3-qw-tJx" kind="relationship" relationship="viewControllers" id="luP-vB-Rgw"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="plb-Fb-Yhr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1846" y="497"/>
+        </scene>
+        <!--Courses-->
+        <scene sceneID="FKu-Md-CRM">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uHF-4l-zff" userLabel="Courses" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Courses" image="museum_32px.png" id="zDL-OH-meb"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VYW-N8-Rnq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="0Zw-7W-Isj" kind="relationship" relationship="rootViewController" id="9pG-ZN-ag3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8z5-9I-rqM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2789" y="497"/>
+        </scene>
+        <!--Teachers-->
+        <scene sceneID="s6Y-of-5w1">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="OU3-qw-tJx" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Teachers" image="name_32px.png" id="kdd-oi-Ah0"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="yeT-E5-17Q">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="xv2-eI-BOn" kind="relationship" relationship="rootViewController" id="TcE-bd-YCI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Ck-Z8-609" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2789" y="1175"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="gender_neutral_user_32px.png" width="32" height="32"/>
+        <image name="museum_32px.png" width="32" height="32"/>
+        <image name="name_32px.png" width="32" height="32"/>
+    </resources>
 </document>
